--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
+    "@mui/styles": "^5.2.0",
     "firebase": "^9.5.0",
     "next": "12.0.4",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
